fix broken scroll on mobile

--- a/src/theme/Layout/styles.scss
+++ b/src/theme/Layout/styles.scss
@@ -24,6 +24,7 @@
 }
 
 :root {
+  &,
   body {
     overflow-x: hidden !important;
   }
